--- a/bizopt/BO/templates/documents.html
+++ b/bizopt/BO/templates/documents.html
@@ -49,6 +49,12 @@
                 </button>
             </li>
 
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
+                <button class="uk-button uk-button-text uk-width-1 uk-text-break"
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px;">Партнерское Соглашение
+                </button>
+            </li>
+            
             
         </ul>
     </div>
