--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -10,6 +10,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
     <script src="https://kit.fontawesome.com/6fc980010f.js" crossorigin="anonymous"></script>
 
+    <!-- Yandex.Metrika counter -->
+
+    <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(90687318, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+    });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/90687318" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    
+    <!-- /Yandex.Metrika counter -->
+
 </head>
 <style>
 
