--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -2,6 +2,59 @@
 
 {% block content %}
 
+<style>
+    .checked {
+        color: orange;
+    }
+
+    .rating-area {
+        overflow: hidden;
+        width: 265px;
+        margin: 0 auto;
+    }
+
+    .rating-area:not(:checked)>input {
+        display: none;
+    }
+
+    .rating-area:not(:checked)>label {
+        float: right;
+        width: 42px;
+        padding: 0;
+        cursor: pointer;
+        font-size: 32px;
+        line-height: 32px;
+        color: lightgrey;
+        text-shadow: 1px 1px #bbb;
+    }
+
+    .rating-area:not(:checked)>label:before {
+        content: '★';
+    }
+
+    .rating-area>input:checked~label {
+        color: gold;
+        text-shadow: 1px 1px #c60;
+    }
+
+    .rating-area:not(:checked)>label:hover,
+    .rating-area:not(:checked)>label:hover~label {
+        color: gold;
+    }
+
+    .rating-area>input:checked+label:hover,
+    .rating-area>input:checked+label:hover~label,
+    .rating-area>input:checked~label:hover,
+    .rating-area>input:checked~label:hover~label,
+    .rating-area>label:hover~input:checked~label {
+        color: gold;
+        text-shadow: 1px 1px goldenrod;
+    }
+
+    .rate-area>label:active {
+        position: relative;
+    }
+</style>
 
 <div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 0  auto">
     <container class="container uk-flex uk-flex-around uk-flex-top uk-width-1">
@@ -31,10 +84,10 @@
                 </li>
             </ul>
 
-            <a class="uk-position-center-left uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s" href="#" uk-slidenav-previous
-                uk-slider-item="previous"></a>
-            <a class="uk-position-center-right uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s" href="#" uk-slidenav-next
-                uk-slider-item="next"></a>
+            <a class="uk-position-center-left uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s"
+                href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s"
+                href="#" uk-slidenav-next uk-slider-item="next"></a>
 
 
         </div>
@@ -98,6 +151,20 @@
                                     <p class="uk-margin-left uk-margin-small-top"> картой онлайн</p>
                                 </div>
                                 <div class="uk-flex">
+                                    <p class="uk-margin-small-top">Количество: </p>
+                                    <div
+                                        class="uk-flex uk-uk-flex-center uk-flex-middle uk-width-expand uk-margin-medium-left">
+                                        <a class="uk-button uk-button-link amount-changer" id="minusBtn"
+                                            uk-icon="icon: minus"></a>
+                                        <input type="number" name="amount" min="1" max="1000" id="amount" value="1" style="margin:0 2%"
+                                            class="uk-input uk-width-1-5">
+                                        <a class="uk-button uk-button-link amount-changer" id="plusBtn"
+                                            uk-icon="icon: plus"></a>
+                                        <!-- <button type="button" class="uk-width-auto uk-heading-xsmall uk-button uk-button-primary" style="padding: 0 20%"><span uk-icon="icon: minus; ratio: 4"></span></button> -->
+                                        <!-- <button type="button" class="uk-width-auto uk-heading-xsmall uk-button uk-button-primary" style="padding: 0 20%"><span uk-icon="icon: plus; ratio: 4"></span></button> -->
+                                    </div>
+                                </div>
+                                <div class="uk-flex">
                                     <p class="uk-margin-small-top">Адрес доставки:</p>
                                     <div class="uk-margin-left" style="width: 65%">
                                         <input class="uk-input" name="address" id="form-stacked-text" type="text"
@@ -116,7 +183,8 @@
                                     type="button">Закрыть</button>
 
                                 {% csrf_token %}
-                                <button class="uk-button uk-button-primary" name="buy_product" type="submit"
+                                <button class="uk-button uk-button-primary" style="background-color: #B54F00;"
+                                    name="buy_product" type="submit"
                                     onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Заказать
                                     товар</button>
                             </div>
@@ -313,66 +381,12 @@
         </div>
     </container>
 </div>
-</div>
-</div>
 
 
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
-<style>
-    .checked {
-        color: orange;
-    }
 
-    .rating-area {
-        overflow: hidden;
-        width: 265px;
-        margin: 0 auto;
-    }
-
-    .rating-area:not(:checked)>input {
-        display: none;
-    }
-
-    .rating-area:not(:checked)>label {
-        float: right;
-        width: 42px;
-        padding: 0;
-        cursor: pointer;
-        font-size: 32px;
-        line-height: 32px;
-        color: lightgrey;
-        text-shadow: 1px 1px #bbb;
-    }
-
-    .rating-area:not(:checked)>label:before {
-        content: '★';
-    }
-
-    .rating-area>input:checked~label {
-        color: gold;
-        text-shadow: 1px 1px #c60;
-    }
-
-    .rating-area:not(:checked)>label:hover,
-    .rating-area:not(:checked)>label:hover~label {
-        color: gold;
-    }
-
-    .rating-area>input:checked+label:hover,
-    .rating-area>input:checked+label:hover~label,
-    .rating-area>input:checked~label:hover,
-    .rating-area>input:checked~label:hover~label,
-    .rating-area>label:hover~input:checked~label {
-        color: gold;
-        text-shadow: 1px 1px goldenrod;
-    }
-
-    .rate-area>label:active {
-        position: relative;
-    }
-</style>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
@@ -405,6 +419,25 @@
         document.getElementById('amount').innerHTML = amount[index]
         console.log(amount)
     }));
+
+    $('.amount-changer').on('click', function () {
+        number = parseInt($('#amount').val())
+        if (this.id == "plusBtn" && number >= 1 ){
+            $('#amount').val(number + 1)
+        } else if (number <= 1){
+            $('#amount').val(1)
+        } else{
+            $('#amount').val(number - 1)
+        }
+    });
+    $('#amount').on('input', function () {
+        if (parseInt($('#amount').val()) <= 1){
+            $('#amount').val(1)
+        }
+        if (parseInt($('#amount').val()) >= 1000){
+            $('#amount').val(1000)
+        }
+    });
 </script>
 
 
