--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -33,11 +33,10 @@
                             type="button" uk-toggle="target: #modal-close-default">Оплатить заказ</button>
                         <div class="uk-flex" style="margin-top: 5%">
                             {% csrf_token %}
-                            <button class="uk-button uk-button-danger uk-border-rounded uk-width-auto"
-                                style="margin: 0 1%" name="decline" value="{{product.id}}"
-                                type="submit">Отказаться</button>
+                            <button class="uk-button uk-button-danger uk-border-rounded uk-width-1" style="margin: 0 1%"
+                                name="decline" value="{{product.id}}" type="submit">Отказаться</button>
                             <!-- <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}" -->
-                                <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
+                            <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
                         </div>
                     </div>
                 </div>
