--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -27,7 +27,7 @@
     }
 </style>
 
-<body>
+<body style="pointer-events: auto;">
     <div class="uk-flex uk-flex-middle uk-flex-center"
         style="width: 100px; position: fixed; top: 3%; left: 0; z-index: 1000; border: none">
         <a class="uk-button uk-button-secondary uk-width-1" type="button" uk-toggle="target: #offcanvas-overlay"
