--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -192,6 +192,7 @@
                 title: 'Упс',
                 text: `Похоже что вы уже выбрали эту категорию`,
             })
+            alert("WARNING \n Упс, похоже что вы уже выбрали эту категорию")
         }
     }
 
