--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -8,6 +8,27 @@
     .thumbnail {
         height: 192px;
     }
+
+    .loader {
+        border: 16px solid #f3f3f3;
+        /* Light grey */
+        border-top: 16px solid #3498db;
+        /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
 </style>
 
 <div class="uk-flex uk-flex-top uk-flex-center" style="margin: 0 auto;">
@@ -28,9 +49,7 @@
                     </div>
                     <div class="uk-width-2-5">
                         <label>Бренд <i uk-tooltip="Введите название бренда" uk-icon="question"></i></label>
-                        <div>
-                            {{ form8.brand }}
-                        </div>
+                        <p class="uk-text-bold uk-text-large uk-text-uppercase uk-text-truncate">{{shop.name}}</p>
                     </div>
                 </div>
                 <div class="uk-flex uk-flex-top uk-flex-between uk-margin-medium-bottom">
@@ -213,6 +232,10 @@
 
             <div class="tab" style="display: none;">
                 <h1>please wait</h1>
+                <div class="uk-flex uk-flex-center uk-flex-middle">
+                    <div class="loader"></div>
+
+                </div>
             </div>
 
 
@@ -307,66 +330,6 @@
     });
 
 
-
-    // var getEl = 'js-progressbar1';
-    // var inEl = '.js-upload1';
-
-    // var bar = document.getElementById(getEl);
-
-    // UIkit.upload(inEl, {
-
-    //     url: '',
-    //     multiple: true,
-
-    //     beforeSend: function () {
-    //         console.log('beforeSend', arguments);
-    //     },
-    //     beforeAll: function () {
-    //         console.log('beforeAll', arguments);
-    //     },
-    //     load: function () {
-    //         console.log('load', arguments);
-    //     },
-    //     error: function () {
-    //         console.log('error', arguments);
-    //     },
-    //     complete: function () {
-    //         console.log('complete', arguments);
-    //     },
-
-    //     loadStart: function (e) {
-    //         console.log('loadStart', arguments);
-
-    //         bar.removeAttribute('hidden');
-    //         bar.max = e.total;
-    //         bar.value = e.loaded;
-    //     },
-
-    //     progress: function (e) {
-    //         console.log('progress', arguments);
-
-    //         bar.max = e.total;
-    //         bar.value = e.loaded;
-    //     },
-
-    //     loadEnd: function (e) {
-    //         console.log('loadEnd', arguments);
-
-    //         bar.max = e.total;
-    //         bar.value = e.loaded;
-    //     },
-
-    //     completeAll: function () {
-    //         console.log('completeAll', arguments);
-
-    //         setTimeout(function () {
-    //             bar.setAttribute('hidden', 'hidden');
-    //         }, 1000);
-
-    //         alert('Upload Completed');
-    //     }
-
-    // });
 </script>
 
 <script>
@@ -377,28 +340,31 @@
     function PassChecker(n) {
         console.log("PassChecker = " + n)
         let product_name = document.getElementById("product_name").value.length;
-        let brand = document.getElementById("brand").value.length;
         let description = document.getElementById("description").value.length;
         let comps = document.getElementById('inputDiv').children.length
         let sizes = document.getElementById('sizeInput').children.length
         let btn = document.getElementById('nextBtn')
-        if (n == 1 && product_name > 0 && brand > 0 && description > 0 && comps > 0 && sizes > 0) {
+        if (n == 1 && product_name > 0 && description > 0 && comps > 0 && sizes > 0) {
             btn.style["background-color"] = 'blue'
             btn.disabled = false;
             return 1
         } else if (n == 2) {
             let prices = document.getElementsByClassName("price")
-            let amount = document.getElementsByClassName("price")
+            let amount = document.getElementsByClassName("amount")
             let checker1 = false
             let checker2 = false
             for (let i = 0; i < prices.length; i++) {
                 if (prices[i].value.length > 0) {
                     checker1 = true
+                } else{
+                    checker1 = false
                 }
             }
             for (let i = 0; i < amount.length; i++) {
                 if (amount[i].value.length > 0) {
                     checker2 = true
+                } else{
+                    checker2 = false
                 }
             }
             if (checker1 && checker2) {
@@ -418,7 +384,7 @@
             btn.disabled = false;
             return 1
 
-        } else if (n == 4){
+        } else if (n == 4) {
             localStorage.page = 5;
             btn.type = "submit"
             return 1
