--- a/bizopt/BO/templates/parentLog.html
+++ b/bizopt/BO/templates/parentLog.html
@@ -1,121 +1,114 @@
-<!doctype html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>BeFreela</title>
-    <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-    <script  src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <style>
-        body {
-            background: #eee
-        }
+{% block content %}
 
-        #regForm {
-            background-color: #ffffff;
-            margin: 0px auto;
-            font-family: Raleway;
-            padding: 40px;
-            border-radius: 10px
-        }
+<style>
+    body {
+        background: #eee
+    }
 
-        #register {
-            color: #6A1B9A
-        }
+    #regForm {
+        background-color: #ffffff;
+        margin: 0px auto;
+        font-family: Raleway;
+        padding: 40px;
+        border-radius: 10px
+    }
 
-        h1 {
-            text-align: center
-        }
+    #register {
+        color: #6A1B9A
+    }
 
-        input {
-            padding: 10px;
-            width: 100%;
-            font-size: 17px;
-            font-family: Raleway;
-            border: 1px solid #aaaaaa;
-            border-radius: 10px;
-            -webkit-appearance: none
-        }
+    h1 {
+        text-align: center
+    }
 
-        .tab input:focus {
-            border: 1px solid #6a1b9a !important;
-            outline: none
-        }
+    input {
+        padding: 10px;
+        width: 100%;
+        font-size: 17px;
+        font-family: Raleway;
+        border: 1px solid #aaaaaa;
+        border-radius: 10px;
+        -webkit-appearance: none
+    }
 
-        input.invalid {
-            border: 1px solid #e03a0666
-        }
+    .tab input:focus {
+        border: 1px solid #6a1b9a !important;
+        outline: none
+    }
 
-        button {
-            background-color: #6A1B9A;
-            color: #ffffff;
-            border: none;
-            border-radius: 50%;
-            padding: 10px 20px;
-            font-size: 17px;
-            font-family: Raleway;
-            cursor: pointer
-        }
+    input.invalid {
+        border: 1px solid #e03a0666
+    }
 
-        button:hover {
-            opacity: 0.8
-        }
+    button {
+        background-color: #6A1B9A;
+        color: #ffffff;
+        border: none;
+        border-radius: 50%;
+        padding: 10px 20px;
+        font-size: 17px;
+        font-family: Raleway;
+        cursor: pointer
+    }
 
-        button:focus {
-            outline: none !important
-        }
+    button:hover {
+        opacity: 0.8
+    }
 
-        #prevBtn {
-            background-color: #bbbbbb
-        }
+    button:focus {
+        outline: none !important
+    }
 
-        .all-steps {
-            text-align: center;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            width: 100%;
-            display: inline-flex;
-            justify-content: center
-        }
+    #prevBtn {
+        background-color: #bbbbbb
+    }
 
-        .step {
-            height: 40px;
-            width: 40px;
-            margin: 0 2px;
-            background-color: #bbbbbb;
-            border: none;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 15px;
-            color: #6a1b9a;
-            opacity: 0.5
-        }
+    .all-steps {
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 100%;
+        display: inline-flex;
+        justify-content: center
+    }
 
-        .step.active {
-            opacity: 1
-        }
+    .step {
+        height: 40px;
+        width: 40px;
+        margin: 0 2px;
+        background-color: #bbbbbb;
+        border: none;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        color: #6a1b9a;
+        opacity: 0.5
+    }
 
-        .step.finish {
-            color: #fff;
-            background: #6a1b9a;
-            opacity: 1
-        }
+    .step.active {
+        opacity: 1
+    }
 
-        .all-steps {
-            text-align: center;
-            margin-top: 30px;
-            margin-bottom: 30px
-        }
+    .step.finish {
+        color: #fff;
+        background: #6a1b9a;
+        opacity: 1
+    }
 
-        .thanks-message {
-            display: none
-        }
-    </style>
-</head>
+    .all-steps {
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 30px
+    }
+
+    .thanks-message {
+        display: none
+    }
+</style>
 
 <body>
 
@@ -183,7 +176,6 @@
 
     {# Assumes you setup the password_reset view in your URLconf #}
 </body>
-<script  src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
 
-</html>
+{% endblock %}
