--- a/bizopt/BO/templates/profile.html
+++ b/bizopt/BO/templates/profile.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BeFreela</title>
-</head>
+{% extends "base.html" %}
+
+{% block content %}
 <body>
 
 </body>
 </html>
+{% endblock %}
