--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -1,15 +1,6 @@
-<!doctype html>
-<html>
 
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<title>BeFreela</title>
-	<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
-	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-</head>
+{% extends "base.html" %} {% block content %}
+
 <style>
 	* {
 		trasform: 0.5s;
@@ -92,8 +83,6 @@
 
 </body>
 
-<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
-</script>
 <script>
 
 	function passchecker(pswd1, pswd2, chbox){
@@ -137,4 +126,4 @@
 	});
 </script>
 
-</html>
+{% endblock %}
