--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 				<br>
-
+				{{errors}}
 				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform2" id="btnform2">Войти</button>
 
 			</form>
