fix partners confirm

--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -855,14 +855,15 @@
                         <br>
                         <div class="uk-width-1 uk-flex uk-flex-center uk-flex-middle">
                             {% if user.is_authenticated %}
-                            <button class="uk-button uk-button-secondary uk-width-3-5" name="partRegBtn"
-                                style="margin: 0 auto" type="submit" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">Отправить</button>
-                                <!-- <button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">With icon</button> -->
+                                {%if user.confirmed%}
+                                    <li>Вы уже отправили заявку</li>
+
                                 {% else %}
                                 <button class="uk-button uk-button-secondary uk-width-3-5" name="partRegBtn"
-                                style="margin: 0 auto" type="button">Отправить</button>
-                                
+                                    style="margin: 0 auto" type="submit" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">Отправить</button>
+                                <!-- <button class="uk-button uk-button-default demo" type="button" onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> Message with an icon'})">With icon</button> -->
                                 {% endif %}
+                            {% endif %}
                         </div>
                         {% csrf_token %}
 
@@ -940,3 +941,4 @@
 </script>
 
 </html>
+{% endblock %}
