rebased main.html

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -338,7 +338,7 @@
         currentTab = 0;
 
     function PassChecker(n) {
-        console.log("PassChecker = " + n)
+        // console.log("PassChecker = " + n)
         let product_name = document.getElementById("product_name").value.length;
         let description = document.getElementById("description").value.length;
         let comps = document.getElementById('inputDiv').children.length
