--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -1,43 +1,31 @@
 {% if user.is_authenticated %}
-<div class="uk-flex uk-flex-between uk-flex-middle"
-    style="padding: 2% 0; background-color:rgba(255, 255, 255, 0.9); font-size: 20px;">
+<nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh;" uk-navbar>
+    <div class="uk-navbar-left">
+        <a href="#main-menuL"  uk-toggle>
+        <span style="color: black" uk-icon="menu"></span>
+    </a>
+    </div>
+    <div class="uk-navbar-center">
 
+        <ul class="uk-navbar-nav">
+            <li>
+                <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
+                    <img src="../../../media/logoImage/logo.svg" alt="" width="40">
+                    <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-small uk-margin-small-left">
+                </a>
+            </li>
+        </ul>
 
-    <nav class="uk-navbar-container uk-flex uk-flex-middle uk-flex-betwee" uk-navbar
-        style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-        <div class="uk-navbar-left uk-width-3-5">
-            <ul class="uk-navbar-nav uk-width-1 uk-flex uk-flex-between">
+    </div>
+    <div class="uk-navbar-right">
 
-                <li class="uk-active uk-width-1-4 uk-margin-small-left uk-margin-small-top">
-                    <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
-                        <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
-                        <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
-                    </a>
-                </li>
-
-                <li class="uk-active uk-flex uk-flex-middle uk-flex-center uk-width-3-4">
-                    <a href="/brands/" style="font-size: 25px; text-transform: none;">Бренды</a>
-                    <div class="uk-divider-vertical uk-margin-remove"
-                        style="height: 50%; background-color: black; width: 2px"></div>
-                    <a href="/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
-                </li>
-
-            </ul>
-        </div>
-        <div class="uk-navbar-right uk-flex uk-flex-middle uk-flex-right uk-width-2-5">
-            <div class="uk-search uk-search-default uk-width-expand">
-
-                {% if user.is_partner == false %}
-
-                <a href="/partners/" class="uk-button uk-button-link uk-text-normal" style="text-transform: none;">Стать
-                    партнером</a>
-
-                {% endif %}
-
-            </div>
-
-
-            <ul class="uk-navbar-nav uk-width-auto">
+        <ul class="uk-navbar-nav">
+            <li>
+                <li><a href="#"><form class="uk-search uk-search-default">
+                    <span class="uk-search-icon-flip" uk-search-icon></span>
+                    <input class="uk-search-input" type="search" placeholder="Search...">
+                </form></a></li>
+                <ul class="uk-navbar-nav uk-width-auto">
                 {% if user.is_partner %}
                 <li class="uk-active">
                     <a href="/becomeCreator/" uk-icon="icon: database"></a>
@@ -74,91 +62,13 @@
                     </div>
                 </li>
             </ul>
-        </div>
-    </nav>
-</div>
-<div>
-    <nav class="uk-navbar-container uk-flex uk-flex-middle uk-flex-betwee" uk-navbar
-        style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-        <div class="uk-navbar-center uk-width-1 uk-flex uk-flex-between">
 
-            <a href="#main-menuL" class="uk-button uk-flex uk-flex-middle uk-flex-left"
-                style="color: white; background-color: #0A3644; width: 15%" uk-toggle>
-                <span uk-icon="icon: table"></span>
-                <p style="margin: 2% auto;">Каталог</p>
-            </a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
-            <div class="uk-search uk-search-default uk-width-4-5">
-                <a type="submit" href="" id="searchBtn" uk-search-icon></a>
-                <input class="uk-search-input" type="search" placeholder="Search" id="search_pole"
-                    style="font-size: 25px; padding: 2% auto">
-            </div>
-        </div>
-    </nav>
-</div>
-{% else %}
-<div class="uk-flex uk-flex-between uk-flex-middle"
-    style="padding: 2% 0; background-color:rgba(255, 255, 255, 0.9); font-size: 20px;">
-
-
-    <nav class="uk-navbar-container uk-width-1 uk-flex uk-flex-middle uk-flex-between" uk-navbar
-        style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-        <div class="uk-navbar-left uk-width-1-3">
-            <ul class="uk-navbar-nav uk-flex uk-flex-between">
-
-                <li class="uk-active uk-width-3-5 uk-margin-small-left uk-margin-small-top">
-                    <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
-                        <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
-                        <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
-                    </a>
-                </li>
-
-            </ul>
-        </div>
-
-        <div class="uk-navbar-center uk-width-1-3" style="margin: 0 auto">
-            <ul class="uk-navbar-nav uk-flex uk-flex-center">
-                <li class="uk-active uk-flex uk-flex-middle uk-flex-center">
-                    <a href="/brands/" style="font-size: 25px; text-transform: none;">Бренды</a>
-                    <div class="uk-divider-vertical uk-margin-remove"
-                        style="height: 50%; background-color: black; width: 2px"></div>
-                    <a href="/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="uk-navbar-right uk-flex uk-flex-middle uk-flex-right uk-width-1-3">
-
-            <ul class="uk-navbar-nav uk-width-auto">
-
-                <li class="uk-active">
-                    <a uk-icon="icon: user" href="/login"></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-<div>
-    <nav class="uk-navbar-container uk-flex uk-flex-middle uk-flex-betwee" uk-navbar
-        style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-        <div class="uk-navbar-center uk-width-1 uk-flex uk-flex-between">
-
-            <a href="#main-menuL" class="uk-button uk-flex uk-flex-middle uk-flex-left"
-                style="color: white; background-color: #0A3644; width: 15%" uk-toggle>
-                <span uk-icon="icon: table"></span>
-                <p style="margin: 2% auto;">Каталог</p>
-            </a>
-
-
-            <div class="uk-search uk-search-default uk-width-4-5">
-                <a type="submit" href="" id="searchBtn" uk-search-icon></a>
-                <input class="uk-search-input" type="search" placeholder="Search" id="search_pole"
-                    style="font-size: 25px; padding: 2% auto">
-            </div>
-        </div>
-    </nav>
-</div>
 {% endif %}
 <!-- start of main-menuL -->
 <div id="main-menuL" uk-offcanvas>
