--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -37,7 +37,7 @@
 
 </style>
 
-<body class="uk-width-1" style="height: 100%; margin: 0 auto; padding-top: 10vh>
+<body class="uk-width-1" style="height: 100%; margin: 0 auto; padding-top: 10vh">
 
 
     {% include "menu.html" %}
