--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
-<nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh;" uk-navbar>
+<nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh; background-color: white;" uk-navbar>
     <div class="uk-navbar-left">
         <a href="#main-menuL"  uk-toggle>
         <span style="color: black" uk-icon="menu"></span>
@@ -70,7 +70,7 @@
 
 {% else %}
 
-<nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh; width: 100%;" uk-navbar>
+<nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh; width: 100%; background-color: white" uk-navbar>
     <div class="uk-navbar-left">
         <a href="#main-menuL"  uk-toggle>
         <span style="color: black" uk-icon="menu"></span>
