--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -106,31 +106,7 @@
                     <a href="/orders/" uk-icon="icon: cart"></a>
                 </li>
                 <li class="uk-active">
-                    <a uk-icon="icon: user"></a>
-                    <div class="uk-navbar-dropdown">
-                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                            {% if user.is_partner %}
-                            <li>
-
-                                <a href="/partners/" class="uk-button uk-button-link" style="text-transform: none;">Вы
-                                    уже
-                                    партнер</a>
-                            </li>
-                            {% else %}
-                            <li class="uk-active">
-                                <a href="/partners/" class="uk-button uk-button-link uk-text-normal"
-                                    style="text-transform: none;">Стать партнером</a>
-                            </li>
-                            {% endif %}
-                            <li class="uk-nav-divider"></li>
-                            <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
-                            <!-- <li class="uk-active"><a href="/chats">Чаты</a></li> -->
-                            <li class="uk-active"><a href="/logout/">Выйти</a></li>
-                            {% if user.is_admin and user.is_superuser and user.is_staff and user.is_active %}
-                            <li class="uk-active"><a href="/admin/">Админка</a></li>
-                            {% endif %}
-                        </ul>
-                    </div>
+                    <a uk-icon="icon: user" href="/login/"></a>
                 </li>
             </ul>
 
