--- a/bizopt/BO/templates/main.html
+++ b/bizopt/BO/templates/main.html
@@ -65,28 +65,51 @@
         {% for shops in prom_shops %}
         {% for shop in shops %}
         <a href="/brands/{{shop.name}}" class="uk-text-center uk-width-1-3">
-                <div data-src="{{shop.logoImage}}"
-                    class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-inline-clip uk-transition-toggle"
-                    style="border: 3px solid black;" tabindex="0" uk-img>
+            <div data-src="{{shop.logoImage}}"
+                class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-inline-clip uk-transition-toggle"
+                style="border: 3px solid black;" tabindex="0" uk-img>
 
-                    <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle"
-                        style="background-color: #0a3644e6;height: 100%; width: 100%; margin: 0 auto; padding: 10%;">
+                <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle"
+                    style="background-color: #0a3644e6;height: 100%; width: 100%; margin: 0 auto; padding: 10%;">
 
-                        <div class="uk-width-1" style="padding: 1%;">
-                            <h1 style="color: white;" class="uk-article-title">{{shop.name}}</h1>
+                    <div class="uk-width-1" style="padding: 1%;">
+                        <h1 style="color: white;" class="uk-article-title">{{shop.name}}</h1>
 
-                            <p style="color: white; font-size: 1.2em;" class="uk-text-center uk-text-break">{{shop.category}}</p>
-                        </div>
-
+                        <p style="color: white; font-size: 1.2em;" class="uk-text-center uk-text-break">
+                            {{shop.category}}</p>
                     </div>
+
                 </div>
-            </a>
+            </div>
+        </a>
         {% endfor %}
         {% endfor %}
     </div>
 </div>
 
+<script>
+    search_pole = document.getElementById('search_pole')
+    search_pole1 = document.getElementById('search_pole')
+    if (search_pole != null) {
+
+        document.getElementById('search_pole').addEventListener('keyup', function (event) {
+            document.getElementById('searchBtn').href = "/goods/search/" + document.getElementById(
+                'search_pole').value;
+            if (event.keyCode == 13) {
+                document.getElementById('searchBtn').click();
+            }
+        });
+
+    } else {
+        document.getElementById('search_pole1').addEventListener('keyup', function (event) {
+            document.getElementById('searchBtn1').href = "/goods/search/" + document.getElementById(
+                'search_pole1').value;
+            if (event.keyCode == 13) {
+                document.getElementById('searchBtn1').click();
+            }
+        });
+    }
+</script>
+
 {% include "footer.html" %}
-
-
 {% endblock %}
