--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -36,7 +36,7 @@
     }
 </style>
 
-<div style="width: 80%; margin: auto" >
+<div style="width: 80%; margin: auto; padding-top: 10vh;" >
     <div class = "uk-grid-match uk-flex">
         <div class = "uk-width-1-2 uk-margin-right">
             <div style = "position: relative;" class="">
