--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -1,30 +1,43 @@
 
 {% extends "base.html" %} {% block content %}
-
 <style>
-	* {
-		trasform: 0.5s;
-	}
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+	input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
 </style>
 
-<body style="margin: 0 auto;">
-	<div class="container" style="margin-top: 5%">
-		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
-		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
-		<div style="margin:auto; border: solid black 2px; border-radius: 10px" class="uk-width-3-5@m">
-			<div class="uk-flex">
-				<button id="signin"
-					style="border-bottom: solid black 2px; border-right: solid black 1px; border-top-left-radius: 10px; outline: none;"
-					class="uk-button uk-button-default uk-width-1-2 uk-margin-remove" type="button">Вход</button>
-				<button id="signup"
-					style="border-bottom: solid black 2px; border-left: solid black 1px; border-top-right-radius: 10px;outline: none;"
-					class="uk-button uk-button-default uk-width-1-2 uk-margin-remove" type="button">Регистрация</button>
-			</div>
-			<form method="POST" id="signup-form" style="display: none; text-align: center; margin: 0 auto"
-				class="uk-widht-4-5@m">
+<div data-src="https://sun9-7.userapi.com/impg/PteaiuqBXAy_Bjk6KWtdd-3Nb7njbWathwBJDA/aCG6Hw5hqQc.jpg?size=2560x1440&quality=96&sign=2c7f4c789cc6f0c27af9c62b3170c0f9&type=album" style=" height: 100vh;" uk-img>
+	<div style="padding-top: 10%;">
+	<div class="uk-flex uk-box-shadow-large" style="width: 80%; margin: auto; height: 70vh; background-color: white;">
+		<div class=" uk-flex" style="width: 40%; margin-top: 10;">
+			<form method="POST" id="signin-form" class="uk-text-center" style="margin: 0 auto">
 				{% csrf_token %}
-				<h3 style="text-align: center; margin-top: 5%">Регистрация</h3>
-				<div class="inputs" style="margin: 0 auto">
+				<div class="uk-margin-medium-top">
+				<h3 style="text-align: center; font-weight: 600; font-size: 48px; ">Вход</h3>
+				<div style="margin:auto; margin-top: 30%;">
+					<div class="uk-flex-column inputs uk-margin-medium-bottom">
+						<label>Почта</label>
+						<input type="text" name="email" class="uk-input uk-border uk-border-rounded"
+							placeholder="email@mail.com">
+					</div>
+					<div class="uk-flex-column inputs">
+						<label>Пароль</label>
+						<input type="password" name="password" placeholder="Password..."
+							class="uk-input uk-border uk-border-rounded">
+					</div>
+				</div>
+				<br>
+				{{errors}}
+				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" style=" border: solid black 2px; border-radius: 5em; background-color: black" type="submit" name="btnform2" id="btnform2">Войти</button>
+				</div>
+			</form>	
+			<form method="POST" id="signup-form" style="display: none; text-align: center; margin: 0 auto"
+				class="uk-widht-4-5@m uk-width-4-5">
+				{% csrf_token %}
+				<div class="uk-margin-medium-top">
+				<h3 style="text-align: center; font-weight: 600; font-size: 48px; ">Регистрация</h3>
+				<div class="inputs" style="margin: auto;  margin-top: 15%;">
 					<div class="uk-flex uk-flex-center uk-text-center">
 						<div class="uk-width-1-2" style="margin: 0 1%">
 							<label>Почта</label>
@@ -52,33 +65,33 @@
 				<label><input id="dock-read-check" class="uk-checkbox" type="checkbox"> При регистрации вы соглашаетесь
 					со всеми пунктами <a href="/documents">документов</a> «Оферта» и «Политика конфиденциальности».
 				</label>
-				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" id="signinbtn" type="submit"
-					name="btnform1" disabled>Зарегестрироваться</button>
-			</form>
-			<form method="POST" id="signin-form" class="uk-text-center uk-width-4-5" style="margin: 0 auto">
-				{% csrf_token %}
-				<h3 style="text-align: center; margin-top: 5%">Войти</h3>
-				<div style="margin:auto">
-					<div class="uk-flex-column inputs uk-margin-medium-bottom">
-						<label>Почта</label>
-						<input type="text" name="email" class="uk-input uk-border uk-border-rounded"
-							placeholder="email@mail.com">
-					</div>
-					<div class="uk-flex-column inputs">
-						<label>Пароль</label>
-						<input type="password" name="password" placeholder="Password..."
-							class="uk-input uk-border uk-border-rounded">
+				<button class="uk-button uk-width-2-3 uk-margin" style=" border: solid black 2px; border-radius: 5em; background-color: black; color: white" id="signinbtn" type="submit"
+					name="btnform1"  disabled>Зарегестрироваться</button>
+			</div>
+			</form>	
+				
+		</div>
+		
+		<div class="uk-flex-column uk-flex-center  uk-flex-middle uk-background-cover" style="width:60%"  data-src="https://sun9-21.userapi.com/impg/cMTazMxn0dcZX_99NASwoo0xRtxswxx8u9Pd0w/nVHJj8AMvek.jpg?size=2560x1440&quality=96&sign=7b7d8371371ba2cb448567396a51ecc8&type=album" uk-img>
+			<div style="margin-left: 15%; margin-top: 15%;">
+				<div class="uk-flex-column">
+					<p style="font-weight: 600; font-size: 45px; margin: 0;">Нет аккаунта?</p>
+						<button id="signup"
+							style=" border: solid black 2px; border-radius: 5em; background-color: black; color: white"
+							class="uk-button uk-button-default uk-width-1-3" type="button">Регистрация</button>
+
+						<p style="font-weight: 600; font-size: 45px;  margin: 0; margin-top: 3%;">Уже есть аккаунт?</p>
+						<button id="signin"
+							style=" border: solid black 2px; border-radius: 5em; background-color: black; color: white"
+							class="uk-button uk-button-default uk-width-1-3" type="button">Вход</button>
 					</div>
 				</div>
-				<br>
-				{{errors}}
-				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform2" id="btnform2">Войти</button>
-
-			</form>
-
+			</div>	
 		</div>
-	</div>
-	</div>
+	</div>	
+</div>
+</div>
+
 
 
 </body>
