minor menu and signin fixes

--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,6 +1,6 @@
-<div style="width: 80%; position: absolute; top: 0; left: 10%; z-index: 1000;">
+<div style="width: 90%; margin: 0 auto">
     {% if user.is_authenticated %}
-    <nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh; background-color: white;" uk-navbar>
+    <nav class="uk-navbar-container" style="margin-bottom: 0; background-color: white;" uk-navbar>
         <div class="uk-navbar-left">
             <a href="#main-menuL" uk-toggle>
                 <span style="color: black" uk-icon="menu"></span>
