--- a/bizopt/BO/templates/main.html
+++ b/bizopt/BO/templates/main.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="uk-section uk-section-default uk-width-4-5" style="margin: 0 auto">
-    <div class="uk-grid uk-width-1 uk-felx uk-flex-center" uk-grid>
+    <div class="uk-grid uk-width-1 uk-felx uk-flex-left" uk-grid>
         {% for items in prom_items %}
         {% for item in items %}
         <a href="/goods/{{item.id}}" class="uk-width-1-4 uk-link-reset">
