--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -36,10 +36,13 @@
     }
 </style>
 
-<div style="width: 80%; margin: auto; padding-top: 10vh;" >
+<div style="width: 97%; margin: auto; padding-top: 10vh;" >
     <div class = "uk-grid-match uk-flex">
         <div class = "uk-width-1-2 uk-margin-right">
-            <div style = "position: relative;" class="">
+            <div data-src="https://sun9-37.userapi.com/impg/Ltm2Sx5-B5-IqeG12dtGRDGvcPQLvtxS_hR0JA/1O5WWyg7psk.jpg?size=835x1195&quality=96&sign=340c3f5a7b63fd7ec8941b986a6e782c&type=album"uk-img>
+
+            </div>
+            <!-- <div style = "position: relative;" class="">
                 <img class="uk-background-cover" src="https://sun9-14.userapi.com/impg/s3_nIg69RlpAwvbrYtOkrnF4sX_P9NASnGlekg/QlAv28YP6j0.jpg?size=1945x2025&quality=96&sign=767adfe7abd2079b9b20604ed26ed4cc&type=album">
                 <div style="position: absolute; top: 20%; left: 50%">
                     <h1>Одежда</h1>
@@ -49,14 +52,14 @@
                         <a href="/goods/" style="background-color:rgb(255, 255, 255)" class="uk-button uk-button-default">Для нее</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class = "uk-width-1-2">
                 <div class="uk-flex-column">
                     <div>
                     <a href="/goods/">
                         <div style="position: relative">
-                        <img class="uk-background-cover" src="https://sun9-80.userapi.com/impg/ZExt00ybURO8r4YvnTNQrtCPGg7aX7kvlS83kA/bc9BivtOPHs.jpg?size=1219x683&quality=96&sign=93245fecd20daec9e1eaf2c8edd9e9c3&type=album">
+                        <img class="uk-background-cover" src="https://sun9-24.userapi.com/impg/Huf4bh2KcZZ_pBvxViB1DjbB783ksu8iM1JA0Q/KDN90meZ9DM.jpg?size=1920x1200&quality=96&sign=56c5d5816274eb3bd26278da43cadee0&type=album">
                            <div style="position: absolute; top: 35%; left: 5%;">
                             <h1>Обувь</h1>
                             <h3>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor.</h3>
@@ -67,18 +70,18 @@
                     <div class="uk-grid-match uk-margin-small-top" uk-grid >
                         <div class="uk-width-1-2">
 
-                         <img src="https://i.pinimg.com/564x/ac/8d/82/ac8d82089b1aa7da215cbf7bac707ecb.jpg">
+                         <img src="https://sun9-59.userapi.com/impg/FVTtXNTZAowyglPxZr3IeDSRDFcxvrw-B9arSw/7BYqVJKWHZA.jpg?size=677x715&quality=96&sign=cb4296877cf218d3c2e13fd5e1b27468&type=album">
 
                         </div>
                         <div class="uk-width-1-2">
-                            <img src="https://i.pinimg.com/564x/ac/8d/82/ac8d82089b1aa7da215cbf7bac707ecb.jpg">
+                            <img src="https://sun9-59.userapi.com/impg/FVTtXNTZAowyglPxZr3IeDSRDFcxvrw-B9arSw/7BYqVJKWHZA.jpg?size=677x715&quality=96&sign=cb4296877cf218d3c2e13fd5e1b27468&type=album">
                         </div>
                      </div>
                 </div>
         </div>
     </div>
 
-    <div style="margin: auto; width: 56%" class="uk-margin-top">
+    <div style="margin: 0 auto;" class="uk-margin-top uk-flex-center uk-text-center">
             <a class="uk-button uk-button-default" href="/goods/">Одежда</a>
             <a class="uk-button uk-button-default uk-margin-small-left" href="/goods/category/Clothing">Одежда</a>
             <a class="uk-button uk-button-default uk-margin-small-left" href="/goods/category/Shoes">Обувь</a>
