--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -1,95 +1,94 @@
 {% extends "base.html" %} {% block content %}
 
 
-<body style="margin: 0 auto;">
-    <div class="uk-margin-medium-top uk-margin-xlarg uk-flex uk-width-1@m uk-width-4-5" uk-filter="target: .js-filter"
-        style="margin: 0 auto; ">
-        <div class="uk-width-1-5" style="height: 100%; font-size: 1.2em;">
+    <div class="uk-margin-medium-top uk-margin-medium-bottom uk-margin-xlarg uk-flex uk-width-1" uk-filter="target: .js-filter"
+        style="margin-left: 0.3em; font-size: 2em">
+        <div class="uk-width-2-5" style="height: 100%; font-size: 2em;">
             <div class="uk-margin-small-left">
                 <ul class="uk-breadcrumb">
-                    <li><a href="/goods/">Все товары</a></li>
+                    <li><a href="/goods/" style="font-size: 0.3em;">Все товары</a></li>
                     {% if category %}
-                    <li><a href="/goods/category/{{category}}">{{category}}</a></li>
+                    <li><a href="/goods/category/{{category}}" style="font-size: 0.3em;">{{category}}</a></li>
                     {% endif %}
-                    <li><span></span></li>
+                    <li><span style="font-size: 0.3em;"></span></li>
                 </ul> 
             </div>
-            <div class="uk-flex uk-flex-middle">
-                <h3 class="uk-margin-medium-right">Фильтр</h3>
-                <a class="uk-button uk-button-link uk-text-right" style="border-bottom: 1px solid"uk-filter-control>Сбросить</a></li>
+            <div class="uk-margin-small-left">
+                <h3 style="font-size: 0.6em;">Фильтры</h3>
+                <a class="uk-button uk-button-link uk-text-right" style="font-size: 0.3em; border-bottom: 1px solid" uk-filter-control>Сбросить</a></li>
                 
             </div>
-            <ul class="uk-nav uk-subnav-pill">
+            <ul class="uk-nav uk-subnav-pill uk-margin-small-left">
                 <h4>Пол:</h4>
                 <li class="uk-width-1 uk-text-right">
-                    <a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: sex">неважно</a></li>
+                    <a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: sex" style="font-size: 0.3em; border-bottom: 1px solid">неважно</a></li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='унисекс']; group: sex">
-                    <a class="uk-button uk-button-link uk-text-right">унисекс</a></li>
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">унисекс</a></li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='мужское']; group: sex">
-                    <a class="uk-button uk-button-link uk-text-right">мужское</a></li>
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">мужское</a></li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='женское']; group: sex">
-                    <a class="uk-button uk-button-link uk-text-right">женское</a></li>
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">женское</a></li>
                 <li class="uk-divider"></li>
             </ul>
-            <ul class="uk-nav uk-subnav-pill">
+            <ul class="uk-nav uk-subnav-pill uk-margin-small-left">
                 <h4>Рейтинг товара:</h4>
-                <li><a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: rating">неважно</a>
+                <li><a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: rating" style="font-size: 0.3em; border-bottom: 1px solid">неважно</a>
                 </li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-rating='5']; group: rating">
-                    <a class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&starf;&starf;</a>
+                    <a style="font-size: 0.4em;" class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&starf;&starf;</a>
                 </li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-rating='4']; group: rating">
-                    <a class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&starf;&star;</a>
+                    <a style="font-size: 0.4em;" class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&starf;&star;</a>
                 </li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-rating='3']; group: rating">
-                    <a class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&star;&star;</a>
+                    <a style="font-size: 0.4em;" class="uk-button uk-button-link uk-text-right">&starf;&starf;&starf;&star;&star;</a>
                 </li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-rating='2']; group: rating">
-                    <a class="uk-button uk-button-link uk-text-right">&starf;&starf;&star;&star;&star;</a>
+                    <a style="font-size: 0.4em;" class="uk-button uk-button-link uk-text-right">&starf;&starf;&star;&star;&star;</a>
                 </li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-rating='1']; group: rating">
-                    <a class="uk-button uk-button-link uk-text-right">&starf;&star;&star;&star;&star;</a>
+                    <a style="font-size: 0.4em;" class="uk-button uk-button-link uk-text-right">&starf;&star;&star;&star;&star;</a>
                 </li>
                 <li class="uk-divider"></li>
             </ul>
-            <ul class="uk-nav uk-subnav-pill">
+            <ul class="uk-nav uk-subnav-pill uk-margin-small-left">
                 <h4>Срок доставки:</h4>
-                <li><a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: duration">неважно</a></li>
+                <li><a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: duration" style="font-size: 0.3em; border-bottom: 1px solid">неважно</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='1 - 2 дня']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">1 - 2 дня</a></li>
+                    uk-filter-control="filter: [data-duration='1 - 2 дня']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">1 - 2 дня</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='2 - 5 дней']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">2 - 5 дней</a></li>
+                    uk-filter-control="filter: [data-duration='2 - 5 дней']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">2 - 5 дней</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='5 - 7 дней']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">5 - 7 дней</a></li>
+                    uk-filter-control="filter: [data-duration='5 - 7 дней']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">5 - 7 дней</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='1 - 2 недели']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">1 - 2 недели</a></li>
+                    uk-filter-control="filter: [data-duration='1 - 2 недели']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">1 - 2 недели</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='2 недели - месяц']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">2 недели - месяц</a></li>
+                    uk-filter-control="filter: [data-duration='2 недели - месяц']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">2 недели - месяц</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='1 - 3 месяца']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">1 - 3 месяца</a></li>
+                    uk-filter-control="filter: [data-duration='1 - 3 месяца']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">1 - 3 месяца</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='3 - 6 месяцев']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">3 - 6 месяцев</a></li>
+                    uk-filter-control="filter: [data-duration='3 - 6 месяцев']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">3 - 6 месяцев</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='6 - 12 месяцев']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">6 - 12 месяцев</a></li>
+                    uk-filter-control="filter: [data-duration='6 - 12 месяцев']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">6 - 12 месяцев</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='1 - 2 года']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">1 - 2 года</a></li>
+                    uk-filter-control="filter: [data-duration='1 - 2 года']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">1 - 2 года</a></li>
                 <li class="uk-width-1 uk-text-right"
-                    uk-filter-control="filter: [data-duration='более 3-х лет']; group: duration"><a
-                        class="uk-button uk-button-link uk-text-right">более 3-х лет</a></li>
+                    uk-filter-control="filter: [data-duration='более 3-х лет']; group: duration">
+                    <a style="font-size: 0.3em;" class="uk-button uk-button-link uk-text-right">более 3-х лет</a></li>
                 <li class="uk-divider"></li>
             </ul>
         </div>
 
-        <ul class="js-filter uk-grid uk-grid-medium uk-width-4-5" uk-grid style="height: 100%; margin: auto; border-left: 1px solid" uk-grid>
+        <ul class="js-filter uk-grid uk-grid-large uk-width-1" style="height: 100%; margin: auto; border-left: 1px solid" uk-grid>
 
             {% include "baseProductCard.html" %}
 
@@ -97,7 +96,6 @@
     </div>
     {% include "footer.html" %}
 
-</body>
 
 <script>
     function pricevalidation() {
