--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -4,40 +4,46 @@
 <body>
     <div class="uk-flex uk-flex-between uk-flex-middle uk-width-4-5" style="margin: 0 auto">
         <h1>Корзина</h1>
-        <h3 class="uk-text-center uk-width-2-3">Здесь вы можете отследить статус текущих заказов</h3>
+        <h3 class="uk-text-center uk-width-2-3" style="font-size: 2em;">Здесь вы можете отследить статус текущих заказов
+        </h3>
     </div>
 
 
 
-    <div class="uk-width-4-5 uk-flex-column uk-margin-bottom" style="margin: 2% auto">
+    <div class="uk-width-1 uk-flex-column uk-margin-bottom" style="margin: 2% auto">
 
         <form method="POST" class="uk-width-1">
             {% for product in products %}
             <div class="uk-flex uk-flex-between uk-flex-middle uk-with-1"
                 style="padding: 1%; margin: 2% auto; border-bottom: 1px solid;">
-                <div class="uk-flex uk-flex-around uk-flex-middle uk-width-3-5">
-                    <div><img src="{{product.img}}" alt="" width="200px" style="border-radius: 5px">
+                <div class="uk-flex uk-flex-between uk-flex-middle uk-width-3-5">
+                    <div>
+                        <img src="{{product.img}}" alt="" width="200px" style="border-radius: 5px">
                     </div>
-                    <div class="uk-flex-row">
+                    <div class="uk-flex-row" style="font-size: 1.3em">
                         <h2 class="uk-text-break">{{ product.id_user_buy }}</h2>
                         <p style="font-size: 1.3em;" class="uk-text-break">Статус: <br> {{ product.status }}</p>
                     </div>
                 </div>
-                <div class="uk-flex uk-flex-around uk-flex-center uk-width-2-5">
+                <div class="uk-flex uk-flex-around uk-flex-center uk-width-2-5" style="font-size: 1.5em">
                     <div class="uk-width-2-5">
                         <h3 class="uk-text-break" style="text-align: center">{{ product.price }} руб.</h3>
                         <p class="uk-text-break uk-text-truncate">Адрес: <br>{{product.delivery_address}}</p>
                     </div>
-                    <div class="uk-width-auto">
-                        <button class="uk-button uk-button-primary uk-border-rounded uk-width-1" style="margin: 0 1%"
-                            type="button" uk-toggle="target: #modal-close-default">Оплатить заказ</button>
-                        <div class="uk-flex" style="margin-top: 5%">
-                            {% csrf_token %}
-                            <button class="uk-button uk-button-danger uk-border-rounded uk-width-1" style="margin: 0 1%"
-                                name="decline" value="{{product.id}}" type="submit">Отказаться</button>
-                            <!-- <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}" -->
-                            <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
-                        </div>
+                    <div class="uk-width-3-5">
+
+                            <button class="uk-button uk-button-primary uk-border-rounded uk-width-1-2"
+                                style="margin: 0 1%; font-size: 1.2em; padding: 1% 0" type="button"
+                                uk-toggle="target: #modal-close-default" uk-icon="icon: credit-card; ratio: 2"></button>
+                            <div class="uk-flex" style="margin-top: 5%">
+                                {% csrf_token %}
+                                <button class="uk-button uk-button-danger uk-border-rounded uk-width-1-2"
+                                    style="margin: 0 1%; font-size: 1.2em; padding: 1% 0" name="decline"
+                                    value="{{product.id}}" type="submit" uk-icon="icon: trash; ratio: 2"></button>
+                                <!-- <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}" -->
+                                <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
+                            </div>
+
                     </div>
                 </div>
             </div>
