--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -1,111 +1,133 @@
-
 {% extends "base.html" %} {% block content %}
-
 <style>
-	* {
-		trasform: 0.5s;
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+	input:-webkit-autofill {
+		-webkit-box-shadow: 0 0 0px 1000px white inset;
 	}
 </style>
 
-<body style="margin: 0 auto;">
-	<div class="container" style="margin-top: 5%">
-		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
-		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
-		<div style="margin:auto; border: solid black 2px; border-radius: 10px" class="uk-width-3-5@m">
-			<div class="uk-flex">
-				<button id="signin"
-					style="border-bottom: solid black 2px; border-right: solid black 1px; border-top-left-radius: 10px; outline: none;"
-					class="uk-button uk-button-default uk-width-1-2 uk-margin-remove" type="button">Вход</button>
-				<button id="signup"
-					style="border-bottom: solid black 2px; border-left: solid black 1px; border-top-right-radius: 10px;outline: none;"
-					class="uk-button uk-button-default uk-width-1-2 uk-margin-remove" type="button">Регистрация</button>
+<div data-src="https://sun9-7.userapi.com/impg/PteaiuqBXAy_Bjk6KWtdd-3Nb7njbWathwBJDA/aCG6Hw5hqQc.jpg?size=2560x1440&quality=96&sign=2c7f4c789cc6f0c27af9c62b3170c0f9&type=album"
+	style=" height: 90vh;" uk-img>
+	<div style="padding-top: 5%;">
+		<div class="uk-box-shadow-large" style="width: 95%; margin: auto; padding: 5% 0; background-color: white;">
+			<div class="" style="">
+				<form method="POST" id="signin-form" class="uk-text-center uk-width-4-5"
+					style="margin: 0 auto; font-size: 2em;">
+					{% csrf_token %}
+					<div class="uk-margin-medium-top">
+						<h3 style="text-align: center; font-weight: 600; font-size: 2em; ">Вход</h3>
+						<div style="margin:auto; margin-top: 10%;">
+							<div class="uk-flex-column inputs uk-margin-medium-bottom">
+								<label style="font-size: 1.3em;">Почта</label>
+								<input type="text" name="email"
+									style="font-size: 2em; text-align: center; height: 1.5em"
+									class="uk-input uk-border uk-border-rounded uk-flex uk-flex-middle"
+									placeholder="email@mail.com">
+							</div>
+							<div class="uk-flex-column inputs">
+								<label style="font-size: 1.3em;">Пароль</label>
+								<input type="password" name="password"
+									style="font-size: 2em; text-align: center; height: 1.5em" placeholder="Password..."
+									class="uk-input uk-border uk-border-rounded uk-flex uk-flex-middle">
+							</div>
+						</div>
+						<br>
+						{{errors}}
+						<button class="uk-button uk-button-secondary uk-width-2-3 uk-margin uk-border-pill"
+							style="border: solid black 2px; font-size: 1.5em; padding: 2%;" type="submit"
+							name="btnform2" id="btnform2">Войти</button>
+					</div>
+				</form>
+				<form method="POST" id="signup-form"
+					style="display: none; text-align: center; margin: 0 auto; font-size: 2em;" class="uk-width-4-5">
+					{% csrf_token %}
+					<div class="uk-margin-medium-top">
+						<h3 style="text-align: center; font-weight: 600; font-size: 2em; ">Регистрация</h3>
+						<div class="inputs" style="margin: auto;  margin-top: 15%;">
+							<div class="uk-width-1" style="margin: 0 1%">
+								<label style="font-size: 1.3em;">Почта</label>
+								{{form.email}}
+							</div>
+							<br>
+							<div class="uk-width-1" style="margin: 0 1%">
+								<label style="font-size: 1.3em;">Имя</label>
+								{{form.first_name}}
+							</div>
+							<br>
+							<div class="uk-width-1" style="margin: 0 1%">
+								<label style="font-size: 1.3em;">Пароль</label>
+								{{form.password1}}
+							</div>
+							<br>
+							<div class="uk-width-1" style="margin: 0 1%">
+								<label style="font-size: 1.3em;">Повторите пароль</label>
+								{{form.password2}}
+							</div>
+							<br>
+						</div>
+						<br>
+						<label>
+							<input id="dock-read-check" style="height: 1.5em; width: 1.5em;" class="uk-checkbox" type="checkbox"> При регистрации вы
+							соглашаетесь
+							со всеми пунктами <a href="/documents">документов</a> «Оферта» и «Политика
+							конфиденциальности».
+						</label>
+						<button class="uk-button uk-button-secondary uk-width-auto uk-margin uk-border-pill"
+						style="border: 2px solid; font-size: 1em; padding: 3%;" id="signinbtn" type="submit" name="btnform1"
+							disabled>Зарегестрироваться</button>
+					</div>
+				</form>
+
 			</div>
-			<form method="POST" id="signup-form" style="display: none; text-align: center; margin: 0 auto"
-				class="uk-widht-4-5@m">
-				{% csrf_token %}
-				<h3 style="text-align: center; margin-top: 5%">Регистрация</h3>
-				<div class="inputs" style="margin: 0 auto">
-					<div class="uk-flex uk-flex-center uk-text-center">
-						<div class="uk-width-1-2" style="margin: 0 1%">
-							<label>Почта</label>
-							{{form.email}}
-						</div>
 
-						<div class="uk-width-1-2" style="margin: 0 1%">
-							<label>Имя</label>
-							{{form.first_name}}
-						</div>
-					</div>
-					<br>
-					<div class="uk-flex uk-flex-center uk-text-center">
-						<div class="uk-width-1-2" style="margin: 0 1%">
-							<label>Пароль</label>
-							{{form.password1}}
-						</div>
-						<div class="uk-width-1-2" style="margin: 0 1%">
-							<label>Повторите пароль</label>
-							{{form.password2}}
-						</div>
+			<div class="uk-flex-column uk-flex-center uk-flex-middle uk-background-cover uk-width-4-5"
+				style="margin: 0 auto">
+				<div class="uk-width-1 uk-flex uk-flex-center uk-flex-middle">
+					<div style="margin-top: 20%;">
+
+						<p style="font-weight: 600; font-size: 2.5em; margin: 0;">Нет аккаунта?</p>
+						<button id="signup" style=" border: 2px solid; font-size: 2em; padding: 0.4em 0;"
+							class="uk-button uk-button-secondary uk-width-1 uk-border-pill uk-text-bold"
+							type="button">Регистрация</button>
+						<br>
+						<br>
+						<p style="font-weight: 600; font-size: 2.5em; margin: 0; margin-top: 3%;">Уже есть аккаунт?</p>
+						<button id="signin" style=" border: 2px solid; font-size: 2em; padding: 0.4em 0;"
+							class="uk-button uk-button-secondary uk-width-1 uk-border-pill uk-text-bold"
+							type="button">Вход</button>
 					</div>
 				</div>
-				<br>
-				<label><input id="dock-read-check" class="uk-checkbox" type="checkbox"> При регистрации вы соглашаетесь
-					со всеми пунктами <a href="/documents">документов</a> «Оферта» и «Политика конфиденциальности».
-				</label>
-				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" id="signinbtn" type="submit"
-					name="btnform1" disabled>Зарегестрироваться</button>
-			</form>
-			<form method="POST" id="signin-form" class="uk-text-center uk-width-4-5" style="margin: 0 auto">
-				{% csrf_token %}
-				<h3 style="text-align: center; margin-top: 5%">Войти</h3>
-				<div style="margin:auto">
-					<div class="uk-flex-column inputs uk-margin-medium-bottom">
-						<label>Почта</label>
-						<input type="text" name="email" class="uk-input uk-border uk-border-rounded"
-							placeholder="email@mail.com">
-					</div>
-					<div class="uk-flex-column inputs">
-						<label>Пароль</label>
-						<input type="password" name="password" placeholder="Password..."
-							class="uk-input uk-border uk-border-rounded">
-					</div>
-				</div>
-				<br>
-
-				<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform2" id="btnform2">Войти</button>
-
-			</form>
-
+			</div>
 		</div>
 	</div>
-	</div>
+</div>
+</div>
+
 
 
 </body>
 
 <script>
-
-	function passchecker(pswd1, pswd2, chbox){
-		console.log(pswd1.val(), pswd2.val(), chbox)
-		if (pswd1.val() == pswd2.val() && pswd2.val().length > 0){
+	function passchecker(pswd1, pswd2, chbox) {
+		if (pswd1.val() == pswd2.val() && pswd2.val().length > 3) {
 			pswd1.css('border-color', 'green')
 			pswd2.css('border-color', 'green')
-		} 
-		if(chbox == false && pswd1.val() == pswd2.val() && pswd2.val().length > 0){
-			$('#signinbtn').attr('disabled', 'disabled')
-		} 
-		if (chbox && pswd1.val() == pswd2.val() && pswd2.val().length > 0){
-			pswd1.css('border-color', 'green')
-			pswd2.css('border-color', 'green')
-			$('#signinbtn').attr('disabled', false)
-		}else{
+		} else {
 			pswd1.css('border-color', 'red')
 			pswd2.css('border-color', 'red')
 			$('#signinbtn').attr('disabled', 'disabled')
 		}
+		if (chbox && pswd1.val() == pswd2.val() && pswd2.val().length > 0) {
+			pswd1.css('border-color', 'green')
+			pswd2.css('border-color', 'green')
+			$('#signinbtn').attr('disabled', false)
+		} else {
+			$('#signinbtn').attr('disabled', 'disabled')
+		}
 	}
 
-	$('#dock-read-check').on('click', function(){
+	$('#dock-read-check').on('click', function () {
 		passchecker($('#password1'), $('#password2'), $('#dock-read-check').is(':checked'))
 	})
 
